# brokex-sol

./: .env.example  .gitignore  Anchor.toml  CONTRIBUTION.md  Cargo.toml  Extended_MVP.md  MVP_SPEC.md  README.md  UPGRADE_NOTES_45.md  package.json  tsconfig.json  v1.md
.github/workflows/: anchor-ci.yml  auto-close-issues.yml
deploy/: brokex_core-keypair.json  brokex_vault-keypair.json
deployments/: devnet.json  latest.json
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx  OrderForm.tsx  PositionsPanel.tsx
frontend/src/contexts/: ToastContext.tsx
frontend/src/pages/: Portfolio.tsx  Vault.tsx
frontend/src/pages/mobile/: MobilePortfolio.tsx  MobileTrade.tsx
frontend/src/utils/solana/: programConfig.ts
keys/: localnet-authority.json
programs/brokex-core/: Cargo.toml
programs/brokex-core/src/: constants.rs  error.rs  instructions.rs  lib.rs  logic.rs  oracle.rs  state.rs
programs/brokex-core/src/instructions/: add_asset.rs  add_margin.rs  cancel_order.rs  close_position.rs  emergency_close.rs  execute_batch.rs  initialize_protocol.rs  open_position.rs  remove_margin.rs  sync_vault_unrealized_pnl.rs  toggle_asset_status.rs  toggle_protocol_status.rs  update_admin.rs  update_asset_pyth_feed.rs  update_sl_tp.rs  validate_merged_oracle_snapshot.rs
programs/brokex-core/tests/: test_close_position.rs  test_merged_oracle_snapshot.rs  test_oracle.rs  test_protocol.rs  test_trade.rs
programs/brokex-core/tests/common/: mod.rs
programs/brokex-solana/: Cargo.toml
programs/brokex-solana/src/: lib.rs
programs/brokex-solana/tests/: test_initialize.rs
programs/brokex-vault/: Cargo.toml
programs/brokex-vault/src/: contexts.rs  error.rs  lib.rs  vault_math.rs
programs/brokex-vault/src/instructions/: admin_set_paused.rs  admin_set_reported_unrealized_pnl.rs  core_set_reported_unrealized_pnl.rs  deposit.rs  initialize.rs  lp_deposit.rs  lp_nav.rs  lp_withdraw.rs  mod.rs  settle.rs  update_locked_capital.rs  withdraw.rs
programs/brokex-vault/src/state/: vault.rs
programs/brokex-vault/tests/: vault_flow.rs
scripts/: bootstrap-devnet.cjs
tests/: brokex-core-lifecycle.ts  brokex-core.ts  brokex_vault.ts
