[package]
name = "brokex-core"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
autotests = false

[lib]
crate-type = ["cdylib", "lib"]
name = "brokex_core"

[features]
default = []
# LiteSVM tests load `target/deploy/*.so` — run `yarn test:rust:litesvm` or `prep:program-keys` + `anchor build` first.
litesvm-integration = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }

[dev-dependencies]
anchor-litesvm = "0.4.0"
spl-token = { version = "9.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "8.0.0", features = ["no-entrypoint"] }

[[test]]
name = "test_oracle"
path = "tests/test_oracle.rs"

[[test]]
name = "test_protocol"
path = "tests/test_protocol.rs"
required-features = ["litesvm-integration"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
