[package]
name = "brokex-solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "brokex_solana"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true

[dev-dependencies]
litesvm = "0.7.1"
solana-instruction = "2.3.3"
solana-keypair = "2.2"
solana-message = "2.4.0"
solana-pubkey = "2.4.0"
solana-signer = "2.2"
solana-transaction = "2.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
